--- a/src/main/resources/templates/pet/index.html
+++ b/src/main/resources/templates/pet/index.html
@@ -9,20 +9,20 @@
 <table>
     <thead>
     <tr>
-        <th> Title</th>
-        <th> Author</th>
+        <th> Name</th>
+        <th> Age</th>
     </tr>
     </thead>
     <tbody>
-    <tr th:if="${pets.empty}">
-        <td colspan="2"> No Pets Available</td>
-    </tr>
     <tr th:each="pet : ${pets}">
-        <td><span th:text="${pet.getName()}"> Name </span></td>
-        <td><span th:text="${pet.getAge()}"> Age </span></td>
+        <td><span th:text="${pet.getName()}"></span></td>
+        <td><span th:text="${pet.getAge()}"></span></td>
     </tr>
     </tbody>
+    <br>
 </table>
 
+
+<p><a th:href="@{/pets/add}">Pet Ekle</a></p>
 </body>
 </html>
