--- a/src/main/resources/templates/owner/show.html
+++ b/src/main/resources/templates/owner/show.html
@@ -5,13 +5,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-
+<p><a th:href="@{/}">Ana Sayfaya Dön</a></p>
+<p><a th:href="@{/owners}">Owner Listesine Geri Gön</a></p>
+<hr>
 <h1>Owner</h1>
+<hr>
 <p>[[${ownerDto.fullName}]]</span></p>
 <p>[[${ownerDto.telephoneNumber}]]</p>
 <p>[[${ownerDto.email}]]</p>
 <p>[[${ownerDto.address}]]</p>
-
 
 </body>
 </html>
