Pet için owner gösterimi ve ekleme sorunu.
Yeni ve mevcut pet için owner eklemede sorun var. Dto'ları kaldırıp çözüm bulmaya çalışacağım.

--- a/src/main/resources/templates/owner/index.html
+++ b/src/main/resources/templates/owner/index.html
@@ -16,8 +16,9 @@
     <thead>
     <tr>
         <th>Ad Soyad</th>
-        <th>Yaş</th>
-        <th>Tür</th>
+        <th>Telefon</th>
+        <th>Email</th>
+        <th>Adres</th>
         <th>Oluşturulma Tarihi</th>
         <th>Güncellenme Tarihi</th>
     </tr>
