--- a/src/main/resources/templates/owner/show.html
+++ b/src/main/resources/templates/owner/show.html
@@ -3,6 +3,13 @@
 <head>
     <title>Vet App</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+    <style>
+        table, th, td {
+            border: 1px solid black;
+        }
+    </style>
+
 </head>
 <body>
 <p><a th:href="@{/}">Ana Sayfaya Dön</a></p>
@@ -17,5 +24,37 @@
 <p><b>Adres:</b> [[${owner.address}]]</p>
 <p><a th:href="@{/owners/edit/{id}(id=${owner.id})}">Düzenle</a></p>
 <p><a th:href="@{/owners/delete/{id}(id=${owner.id})}">Sil</a></p>
+
+<hr>
+
+<div th:if="(not ${owner.pets.isEmpty()})">
+    <h3>Pets</h3>
+    <table>
+        <thead>
+        <tr>
+            <th>İsim</th>
+            <th>Yaş</th>
+            <th>Tür</th>
+            <th>Oluşturulma Tarihi</th>
+            <th>Güncellenme Tarihi</th>
+            <th>İşlem</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="pet : ${owner.pets}">
+            <td>[[${pet.name}]]</span></td>
+            <td>[[${pet.age}]]</td>
+            <td>[[${pet.genus.value}]]</td>
+            <td th:text="${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}"></td>
+            <td th:text="${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}"></td>
+            <td>
+                <a th:href="@{/pets/{id}(id=${pet.id})}">Göster</a>
+                <a th:href="@{/pets/edit/{id}(id=${pet.id})}">Düzenle</a>
+                <a th:href="@{/pets/delete/{id}(id=${pet.id})}">Sil</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
