--- a/src/main/resources/templates/pet/show.html
+++ b/src/main/resources/templates/pet/show.html
@@ -15,16 +15,16 @@
 <hr>
 <h1>Pet</h1>
 <hr>
-<p>[[${pet.name}]]</p>
-<p>[[${pet.age}]]</p>
-<p>[[${pet.genus.value}]]</p>
-<p>[[${pet.description}]]</p>
-<p>[[${pet.owner}]]</p>
-<p th:text="${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}"></p>
-<p th:text="${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}"></p>
+<p><b>Name:</b> [[${pet.name}]]</p>
+<p><b>Age:</b> [[${pet.age}]]</p>
+<p><b>Genus:</b> [[${pet.genus.value}]]</p>
+<p><b>Description:</b> [[${pet.description}]]</p>
+<p><b>Created At:</b> [[${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}]]</p>
+<p><b>Updated At:</b> [[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}]]</p>
 
+<hr>
 <div th:if="${pet.owner}">
-    <h2>Owner</h2>
+    <h3>Owner</h3>
     <hr>
     <p><b>Ad Soyad:</b> [[${pet.owner.fullName}]]</span></p>
     <p><b>Telefon:</b> [[${pet.owner.telephoneNumber}]]</p>
