--- a/src/main/resources/templates/owner/editForm.html
+++ b/src/main/resources/templates/owner/editForm.html
@@ -13,11 +13,15 @@
     <p>[[${message}]]</p>
     <hr>
 </div>
-<ul>
-    <li th:each="err : ${#fields.errors('owner.*')}" th:text="${err}"/>
-</ul>
 
 <form th:action="@{/owners/edit/{id}(id=${owner.id})}" th:object="${owner}" method="post">
+
+    <div th:if="${#fields.hasAnyErrors()}">
+        <ul>
+            <li th:each="err : ${#fields.errors('owner.*')}" th:text="${err}"/>
+        </ul>
+    </div>
+
     <p>Full Name: <input type="text" th:field="*{fullName}"/></p>
     <p>Telephone Number: <input type="text" th:field="*{telephoneNumber}"/></p>
     <p>Email: <input type="email" th:field="*{email}"/></p>
