--- a/src/main/resources/templates/owner/addForm.html
+++ b/src/main/resources/templates/owner/addForm.html
@@ -1,30 +1,57 @@
 <!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" lang="tr">
 <head>
     <title>Vet App</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
 
-<h1>Add Owner</h1>
-<hr>
-<p><a th:href="@{/owners}">Owner Listesine Geri Gön</a></p>
-<hr>
-<form th:action="@{/owners/add}" th:object="${owner}" method="post">
-
-    <div th:if="${#fields.hasAnyErrors()}">
-        <ul>
-            <li th:each="err : ${#fields.errors('owner.*')}" th:text="${err}"/>
-        </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">VetApp</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
+                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
+                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+            </div>
+        </div>
     </div>
+</nav>
 
-    <p>Full Name: <input type="text" th:field="*{fullName}"/></p>
-    <p>Telephone Number: <input type="text" th:field="*{telephoneNumber}"/></p>
-    <p>Email: <input type="email" th:field="*{email}"/></p>
-    <p>Address: <input type="text" th:field="*{address}"/></p>
-    <input type="reset" value="Formu Temizle"/>
-    <p><input type="submit" value="Kaydet"/></p>
-</form>
+<div class="container mt-5 col-md-4">
+    <h4>Yeni Hayvan Sahibi</h4>
+    <hr>
+    <form th:action="@{/owners/add}" th:object="${owner}" method="post">
+        <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger" role="alert">
+            <p th:each="err : ${#fields.errors('owner.*')}" th:text="${err}"></p>
+        </div>
+        <div class="mb-3">
+            <label for="fullName" class="form-label">Ad Soyad</label>
+            <input type="text" class="form-control" th:field="*{fullName}" id="fullName">
+        </div>
+        <div class="mb-3">
+            <label for="telephoneNumber" class="form-label">Telefon</label>
+            <input type="tel" class="form-control" th:field="*{telephoneNumber}" id="telephoneNumber">
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" th:field="*{email}" id="email">
+        </div>
+        <div class="mb-3">
+            <label for="address" class="form-label">Adres</label>
+            <input type="text" class="form-control" th:field="*{address}" id="address">
+        </div>
+        <button type="submit" class="btn btn-success">Kaydet</button>
+    </form>
+
+</div>
 
 </body>
 </html>
