--- a/src/main/resources/templates/owner/search.html
+++ b/src/main/resources/templates/owner/search.html
@@ -1,57 +1,82 @@
 <!DOCTYPE HTML>
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" lang="tr">
 <head>
     <title>Vet App</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-    <style>
-        table, th, td {
-            border: 1px solid black;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">VetApp</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
+                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
+                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+            </div>
+        </div>
+    </div>
+</nav>
+<div class="container mt-5">
 
-<p><a th:href="@{/}">Ana Sayfa</a></p>
-<p><a th:href="@{/owners/add}">Owner Ekle</a></p>
-<p><a th:href="@{/owners}">Geri Dön</a></p>
+    <div class="d-flex justify-content-between">
+        <div>
+            <form th:action="@{/owners/search}" method="get" class="row g-3">
+                <div class="col-auto">
+                    <label for="fullName" class="visually-hidden">Ad Soyad: </label>
+                    <input type="text" class="form-control" name="fullName" id="fullName"
+                           th:value="${param.fullName}">
+                </div>
+                <div class="col-auto">
+                    <button type="submit" class="btn btn-primary mb-3">Ara</button>
+                </div>
+            </form>
+        </div>
+        <div>
+            <a class="btn btn-primary" th:href="@{/owners/add/}"><i class="bi bi-plus-lg"></i> Yeni Kayıt</a>
+        </div>
+    </div>
 
-<div th:if="${message}">
-    <p>[[${message}]]</p>
-</div>
+    <div class="justify-content-start">
+        <span class="badge bg-secondary">Toplam Kayıt: [[${ownerListSize}]]</span>
+    </div>
 
-<hr>
-
-<br>
-
-<div th:if="${owners}">
-    <table>
-        <thead>
-        <tr>
-            <th>Ad Soyad</th>
-            <th>Telefon</th>
-            <th>Email</th>
-            <th>Adres</th>
-            <th>Oluşturulma Tarihi</th>
-            <th>Güncellenme Tarihi</th>
-            <th>İşlem</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="owner : ${owners}">
-            <td>[[${owner.fullName}]]</span></td>
-            <td>[[${owner.telephoneNumber}]]</td>
-            <td>[[${owner.email}]]</td>
-            <td>[[${owner.address}]]</td>
-            <td th:text="${#dates.format(owner.createdAt, 'dd/MMM/yyyy HH:mm')}"></td>
-            <td th:text="${#dates.format(owner.updatedAt, 'dd/MMM/yyyy HH:mm')}"></td>
-            <td><a th:href="@{/owners/{id}(id=${owner.id})}">Göster</a>
-                <a th:href="@{/owners/edit/{id}(id=${owner.id})}">Düzenle</a>
-                <a th:href="@{/owners/delete/{id}(id=${owner.id})}">Sil</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div th:if="${ownerListSize == 0}">
+        <h4>Arama sonucunda kayıt bulunamadı.</h4>
+    </div>
+    <div th:unless="${ownerListSize == 0}">
+        <table class="table table-light table-bordered table-hover mt-3">
+            <thead>
+            <tr>
+                <th scope="col">Ad Soyad</th>
+                <th scope="col">Telefon</th>
+                <th scope="col">Email</th>
+                <th scope="col">Adres</th>
+                <th scope="col">Kayıt Tarihi</th>
+                <th scope="col">İşlem</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="owner : ${owners}">
+                <td class="text-capitalize">[[${owner.fullName}]]</span></td>
+                <td>[[${owner.telephoneNumber}]]</td>
+                <td>[[${owner.email}]]</td>
+                <td>[[${owner.address}]]</td>
+                <td>[[${#dates.format(owner.createdAt, 'dd/MMM/yyyy HH:mm')}]]</td>
+                <td><a class="btn btn-outline-success" th:href="@{/owners/{id}(id=${owner.id})}">Göster</a>
+                    <a class="btn btn-outline-warning" th:href="@{/owners/edit/{id}(id=${owner.id})}">Düzenle</a>
+                    <a class="btn btn-outline-danger" th:href="@{/owners/delete/{id}(id=${owner.id})}">Sil</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 </body>
 </html>
