--- a/src/main/resources/templates/owner/show.html
+++ b/src/main/resources/templates/owner/show.html
@@ -1,58 +1,108 @@
 <!DOCTYPE HTML>
-<html lang="tr">
+<html xmlns:th="https://www.thymeleaf.org" lang="tr">
 <head>
     <title>Vet App</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-    <style>
-        table, th, td {
-            border: 1px solid black;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
 </head>
 <body>
 
-<p><a th:href="@{/}">Ana Sayfaya Dön</a></p>
-<p><a th:href="@{/owners}">Owner Listesine Geri Gön</a></p>
-<hr>
-<h1>Owner</h1>
-<hr>
-<p><b>Ad Soyad:</b> [[${owner.fullName}]]</span></p>
-<p><b>Telefon:</b> [[${owner.telephoneNumber}]]</p>
-<p><b>Email:</b> [[${owner.email}]]</p>
-<p><b>Adres:</b> [[${owner.address}]]</p>
-<p><a th:href="@{/owners/edit/{id}(id=${owner.id})}">Düzenle</a></p>
-<p><a th:href="@{/owners/delete/{id}(id=${owner.id})}">Sil</a></p>
-<hr>
-<div th:if="(not ${owner.pets.isEmpty()})">
-    <h3>Pets</h3>
-    <table>
-        <thead>
-        <tr>
-            <th>İsim</th>
-            <th>Yaş</th>
-            <th>Tür</th>
-            <th>Oluşturulma Tarihi</th>
-            <th>Güncellenme Tarihi</th>
-            <th>İşlem</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="pet : ${owner.pets}">
-            <td>[[${pet.name}]]</span></td>
-            <td>[[${pet.age}]]</td>
-            <td>[[${pet.genus.value}]]</td>
-            <td th:text="${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}"></td>
-            <td th:text="${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}"></td>
-            <td>
-                <a th:href="@{/pets/{id}(id=${pet.id})}">Göster</a>
-                <a th:href="@{/pets/edit/{id}(id=${pet.id})}">Düzenle</a>
-                <a th:href="@{/pets/delete/{id}(id=${pet.id})}">Sil</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" th:href="@{/}">VetApp</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
+                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
+                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
+            </div>
+        </div>
+    </div>
+</nav>
+
+<div class="container mt-5">
+
+    <div class="card text-dark bg-light mb-3">
+        <div class="card-body">
+            <h5 class="card-title">[[${owner.fullName}]]</h5>
+            <hr>
+            <p class="card-text"><b>Telefon:</b> [[${owner.telephoneNumber}]]</p>
+            <p class="card-text"><b>Email:</b> [[${owner.email}]]</p>
+            <p class="card-text"><b>Adres:</b> [[${owner.address}]]</p>
+            <p class="card-text"><b>Kayıt Tarihi:</b> [[${#dates.format(owner.createdAt, 'dd/MMM/yyyy
+                HH:mm')}]]</p>
+            <p class="card-text"><b>Güncellenme Tarihi:</b> [[${#dates.format(owner.updatedAt, 'dd/MMM/yyyy
+                HH:mm')}]]</p>
+        </div>
+        <div class="card-footer text-muted">
+            <div class="row">
+                <div class="col-md-6 d-grid">
+                    <a class="btn  btn-danger" th:href="@{/owners/edit/{id}(id=${owner.id})}">
+                        <i class="bi bi-trash3"></i> Sil</a>
+                </div>
+                <div class="col-md-6 d-grid">
+                    <a class="btn btn-primary" th:href="@{/owners/{id}(id=${owner.id})}">
+                        <i class="bi bi-pencil"></i> Düzenle</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <h4 class="mt-5">Kayıtlı Hayvanlar</h4>
+    <hr>
+    <div class="d-flex justify-content-between">
+        <div>
+            <span class="badge bg-secondary">Toplam Kayıt: [[${owner.pets.size()}]]</span>
+        </div>
+        <div>
+            <a class="btn btn-primary" th:href="@{/pets/add(ownerId=${owner.id})}"><i class="bi bi-plus-lg"></i> Yeni
+                Hayvan Ekle</a>
+        </div>
+    </div>
+    <div th:if="(not ${owner.pets.isEmpty()})">
+        <table class="table table-light table-bordered table-hover mt-3">
+            <thead>
+            <tr>
+                <th>İsim</th>
+                <th>Yaş</th>
+                <th>Tür</th>
+                <th>Oluşturulma Tarihi</th>
+                <th>Güncellenme Tarihi</th>
+                <th>İşlem</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="pet : ${owner.pets}">
+                <td class="text-capitalize">[[${pet.name}]]</span></td>
+                <td>[[${pet.age}]]</td>
+                <td>[[${pet.genus.value}]]</td>
+                <td>[[${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}]]</td>
+                <td>[[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}]]</td>
+                <td>
+                    <div class="row">
+                        <div class="col-md-3 d-grid">
+                            <a class="btn btn-outline-success" th:href="@{/pets/{id}(id=${pet.id})}">Göster</a>
+                        </div>
+                        <div class="col-md-3 d-grid">
+                            <a class="btn btn-outline-warning" th:href="@{/pets/edit/{id}(id=${pet.id})}">Düzenle</a>
+                        </div>
+                        <div class="col-md-3 d-grid">
+                            <a class="btn btn-outline-danger" th:href="@{/pets/delete/{id}(id=${pet.id})}">Sil</a>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
 </div>
+
 </body>
 </html>
